fixing overflow

--- a/public/css/stylesheet2.css
+++ b/public/css/stylesheet2.css
@@ -58,6 +58,7 @@ h1 {
 
 .square:hover .text{
 	visibility: visible;
+	overflow: auto;
 }
 
 
